[package]
authors = ["Kevin Stenerson <kstenerson@developers.wyyerd.com>"]
categories = ["api-bindings"]
description = "API bindings for Google Sign-In"
documentation = "https://docs.rs/google-signin"
edition = "2021"
keywords = ["google", "signin", "oauth", "oauth2", "api"]
license = "MIT/Apache-2.0"
name = "google-signin"
readme = "README.md"
repository = "https://github.com/wyyerd/google-signin-rs"
version = "0.4.0"

[features]
default = ["with-hypertls"]
with-hypertls = ["hyper-tls"]
with-openssl = ["hyper-openssl"]

[dependencies]
bytes = "^1.1"
cache_control = "0.2.0"
hyper = {version = "0.14.26", features = ["client", "http2"]}
hyper-openssl = {version = "^0.9", optional = true}
hyper-rustls = "0.24.0"
hyper-tls = {version = "^0.5", optional = true}
jsonwebtoken = "8.3.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"

[dev-dependencies]
futures = "0.3.28"
tokio = {version = "1.27.0", features = ["full"]}
